--- a/slides/_problem_2_slides.qmd
+++ b/slides/_problem_2_slides.qmd
@@ -1,7 +1,7 @@
 # {auto-animate=true; background-color="#66cccc"}
 
 ::: r-fit-text
-[Can UAVs Help?]{.flow}
+[Can Self-Driving Cars Help?]{.flow}
 :::
 
 ## Definitely, but... {auto-animate=true}
