--- a/slides/_running_validation.qmd
+++ b/slides/_running_validation.qmd
@@ -73,6 +73,25 @@
 - If the new road doesn't dominate the old in any way then it is not added
 :::
 
+## Update non-dominated list {auto-animate=true}
+- Fitness based on points:
+- OOB Percentage
+- Velocity
+- Angle
+![road](img/validation/score.svg){.absolute top=40% left=0% height="40%"}
+![arrow](img/approach/right_arrow.svg){.absolute top=50% left=40% height="15%"}
+![non-dom](img/validation/fitness.svg){.absolute top=40% left=50% height="40%"}
+
+::: footer
+:::
+
+::: {.notes}
+- Loop through existing roads in non-dom list
+- If the new road dominates on 1 or 2 points then it is added to the list
+- If the new road dominates on all 3 points, the old road is removed and the new added
+- If the new road doesn't dominate the old in any way then it is not added
+:::
+
 ## Rinse and repeat {auto-animate=true}
 - Start the test over
 - Randomly choose to evolve a new road
