--- a/slides/_running_validation.qmd
+++ b/slides/_running_validation.qmd
@@ -97,6 +97,7 @@
 - Randomly choose to evolve a new road
 - Or one from the non-dominated list
 - Repeat for 8 hours
+- 8 full test iterations
 ![repeat](img/validation/repeat.svg){.absolute top=40% left=40% height="40%"}
 
 ::: footer
